# snarkpack

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: commitment.rs  errors.rs  ip.rs  lib.rs  macros.rs  pairing_check.rs  proof.rs  prover.rs  srs.rs  transcript.rs  verifier.rs
tests/: aggregation.rs
